# TeXact

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE.txt  README.md  checklist.html  development.html  find-ould.sh  genindex.html  index.html  integration.html  licenses.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml  cli_test.yml  documentation.yml
_sources/: checklist.rst.txt  index.rst.txt  integration.rst.txt  licenses.rst.txt
docs/: conf.py  development.rst  index.rst  integration.rst
source/: printer.py  reviewer.py  reviewer_casing.py  reviewer_chktex.py  reviewer_figure.py  reviewer_inthis.py  reviewer_reflabel.py  reviewer_unsure.py  rewiever_ould.py  template_check.py  texact.py
source/texact_config/: chktexrc
test/: figure_test.tex  ieee_biography_test.tex  inthis.tex  reflabel_test.tex  test.py  unsure.tex
test_files/: casing_test.tex  figure_test.tex  inthis.tex  oulds.tex  test.py
